--- a/suanshuTwo.html
+++ b/suanshuTwo.html
@@ -17,6 +17,14 @@
             bottom: 0;
             overflow: hidden;
         }
+        .suanshu-detail {
+            position: absolute;
+            right: 15%;
+            width: 55px;
+            height: 55px;
+            bottom:44%;
+            /* border: 1px solid #fff; */
+        }
     </style>
 </head>
 
@@ -25,6 +33,11 @@
     <div class="right-set"></div>
     <a class="right-set"  href="./suanshuOne.html"></a>
     <a class="right-set"  href="./suanshuThree.html"></a>
+    <div class="suanshu-detail" onclick="change()"></div>
 </body>
-
+<script>
+    function change(){
+     document.body.style.backgroundImage = "url(./imgs/3-2-1.jpg)";
+    } 
+</script>
 </html>
