--- a/suanshuThree.html
+++ b/suanshuThree.html
@@ -1,31 +1,46 @@
-
 <html>
 
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0, user-scalable=no">
-        <title>动物乐园</title>
-        <style>
-            .login1 {
-                background: url(./imgs/3-3.jpg);
-                background-size: 100% 100%;
-                position: fixed;
-                left: 0;
-                right: 0;
-                top: 0;
-                bottom: 0;
-                overflow: hidden;
-            }
-        </style>
-    </head>
-    <body class="login1">
-        <div class="left-volume"></div>
-        <a class="left-volume" href="./suanshuTwo.html"></a>
-        <div class="right-set"></div>
-        <a class="right-set"  href="./suanshuOne.html"></a>
-        <a class="right-set" href="./suanshuFour.html"></a>
-    </body>
-    
-    </html>
+<head>
+    <link rel="stylesheet" href="index.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0, user-scalable=no">
+    <title>动物乐园</title>
+    <style>
+        .login1 {
+            background: url(./imgs/3-3.jpg);
+            background-size: 100% 100%;
+            position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            overflow: hidden;
+        }
+
+        .suanshu-detail {
+            position: absolute;
+            right: 17%;
+            width: 55px;
+            height: 55px;
+            bottom: 44%;
+            /* border: 1px solid #fff; */
+        }
+    </style>
+</head>
+
+<body class="login1">
+    <div class="left-volume"></div>
+    <a class="left-volume" href="./suanshuTwo.html"></a>
+    <div class="right-set"></div>
+    <a class="right-set" href="./suanshuOne.html"></a>
+    <a class="right-set" href="./suanshuFour.html"></a>
+    <div class="suanshu-detail" onclick="change()"></div>
+</body>
+<script>
+    function change() {
+        document.body.style.backgroundImage = "url(./imgs/3-3-1.jpg)";
+    }
+</script>
+
+</html>
