--- a/chengyuTwo.html
+++ b/chengyuTwo.html
@@ -27,8 +27,12 @@
     <a class="right-set" href="./chengyuOne.html"></a>
     <a class="right-set" href="./chengyuThree.html"></a>
     <div class="chengyu-audio" onclick="play()">
-        <audio src="./狐假虎威.mp3" type="audio/mp3" autoplay="autoplay" id="music">
+        <!-- <audio src="./狐假虎威.mp3" type="audio/mp3" autoplay="autoplay" >
         </audio>
+         -->
+        <video src="./hujiahuwei.mp4" style="width: 100%;height: 100%;" id="music" >
+   
+    </video>
     </div>
 </body>
 <script>
