--- a/chengyuTwo.html
+++ b/chengyuTwo.html
@@ -30,7 +30,7 @@
         <!-- <audio src="./狐假虎威.mp3" type="audio/mp3" autoplay="autoplay" >
         </audio>
          -->
-        <video src="./hujiahuwei.mp4" style="width: 100%;height: 100%;" id="music" >
+        <video src="./hujiahuwei.mp4" style="width: 100%;height: 100%;" id="music" controls="controls" >
    
     </video>
     </div>
