--- a/chengyuThree.html
+++ b/chengyuThree.html
@@ -27,8 +27,9 @@
     <a class="right-set" href="./chengyuOne.html"></a>
     <a class="right-set" href="./chengyuFour.html"></a>
     <div class="chengyu-audio" onclick="play()">
-        <audio src="./守株待兔.mp3" type="audio/mp3" autoplay="autoplay" id="music">
-        </audio>
+        <!-- <audio src="./守株待兔.mp3" type="audio/mp3" autoplay="autoplay" id="music">
+        </audio> -->
+        <video src="./shouzhudaitu.mp4" style="width: 100%;height: 100%;" id="music" controls="controls" >
     </div>
 </body>
 <script>
